# ruccoins

./: .gitignore  .gitmodules  CMakeLists.txt  clean_env.sh  run_node.sh  run_single_node.sh
example/: CMakeLists.txt  client.cc  server.cc  structure.h  test.json
ruccoin/: BlockChain.json  CMakeLists.txt  README.md  config.json
ruccoin/config_json/: config.json
ruccoin/src/: client.cc  client.h  client_main.cc  coin_main.cc  coin_node.cc  coin_node.h  coin_rpc.cc  coin_rpc.h  config.h  cxxopts.h  singleton.h  structure.h  test_prog.cc  tx.h  utils.cc  utils.h  worker_main.cc  worker_node.cc  worker_node.h  worker_rpc.cc  worker_rpc.h
ruccoin/src/pbft/: bft_main.cc  bft_node.cc  bft_node.h  bft_rpc.h
ruccoin/src/pbft/include/: bft.h
ruccoin/test/: test_pbft.cc
test_script/: gen_traces.py  run_traces.py
